--- a/CatalogViewer/CatalogViewer.csproj
+++ b/CatalogViewer/CatalogViewer.csproj
@@ -102,7 +102,7 @@
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="RichemontApiLibrary, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RichemontApiLibrary.1.0.16\lib\netstandard2.0\RichemontApiLibrary.dll</HintPath>
+      <HintPath>..\packages\RichemontApiLibrary.1.0.17\lib\netstandard2.0\RichemontApiLibrary.dll</HintPath>
     </Reference>
     <Reference Include="SimpleInjector, Version=5.0.0.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
       <HintPath>..\packages\SimpleInjector.5.1.0\lib\net461\SimpleInjector.dll</HintPath>
@@ -228,7 +228,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <None Include="images\richemontlogo_aim.png" />
+    <EmbeddedResource Include="images\richemontlogo_aim.png" />
+    <EmbeddedResource Include="images\noimageavailable.png" />
+    <EmbeddedResource Include="images\noimageavailable_100.png" />
     <Content Include="Resources\richemontlogo_aim.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
