--- a/CatalogViewer/App.config
+++ b/CatalogViewer/App.config
@@ -11,7 +11,24 @@
 	  
         <add key="ClientSettingsProvider.ServiceUri" value="" />
         <add key="ClientSettingsProvider.ConnectionStringName" value="DefaultConnection" />
-    
+
+        <!-- Brand Cross Reference -->
+		<add key="BrandCrossReference.BM" value="BNM;B&amp;B_M.png;" />
+		<add key="BrandCrossReference.CR" value="CAR;Cartier;Cartier.png" />
+		<add key="BrandCrossReference.CH" value="CHL;Chloe;chloe.png" />
+		<add key="BrandCrossReference.DU" value="DUN;Dunhill;dunhill.png" />
+		<add key="BrandCrossReference.IW" value="IWC;IWC;iwc_logo.png" />
+		<add key="BrandCrossReference.JL" value="JLC;JLC;JLC_Logo_Black.png" />
+		<add key="BrandCrossReference.MB" value="MTB;Mont Blanc;Mont_Blanc.png" />
+		<add key="BrandCrossReference.MG" value="MTG;Montegrappa;" />
+		<add key="BrandCrossReference.PN" value="PAN;Panerai;Panerai_Logo.png" />
+		<add key="BrandCrossReference.PG" value="PIA;Piaget;Piaget_Logo_Black.png" />
+		<add key="BrandCrossReference.VM" value="VAC;Vacheron;Vacheron_Logo.png" />
+		<add key="BrandCrossReference.RD" value="RDU;Roger Dubuis;logo_RD.png" />
+		<add key="BrandCrossReference.RL" value="RL;Ralph Lauren;" />
+		<add key="BrandCrossReference.VC" value="VCA;Van Cleef &amp; Arpels;VCA_Logo_Black" />
+		<add key="BrandCrossReference.LS" value="ALS;Lange &amp; Sohne;lange_and_sohne_logo.png" />
+		
         <add key="RichemontApis:ProductCatalog:Server:Host" value="https://rlg-ric-test-qua.apigee.net/dms-search-v1" />
         <add key="RichemontApis:ProductCatalog:Server:HostSuffix" value="/query/product-list/result/4fe992aec7492307b439381893281f14" />
         <add key="RichemontApis:ProductCatalog:Paths:ProductList:Path" value="/query/product-list/result/4fe992aec7492307b439381893281f14" />
