--- a/CatalogViewer/App.config
+++ b/CatalogViewer/App.config
@@ -12,6 +12,18 @@
         <add key="ClientSettingsProvider.ServiceUri" value="" />
         <add key="ClientSettingsProvider.ConnectionStringName" value="DefaultConnection" />
 
+		<!-- Base URL. Notes: 1) Order on UI follows order below, 2) empty string items not shown on UI -->
+		<add key="BaseURL.ConnectionString0" value="https://rlg-ric-test-qua.apigee.net/dms-search-v1" />
+		<add key="BaseURL.ConnectionString1" value="https://rlg-ric-test-qua.apigee.net/dms-search-v1" />
+		<add key="BaseURL.ConnectionString2" value="https://rlg-ric-test-qua.apigee.net/dms-search-v1" />
+		<add key="BaseURL.ConnectionString3" value="https://rlg-ric-test-qua.apigee.net/dms-search-v1" />
+		<add key="BaseURL.ConnectionString4" value="https://rlg-ric-test-qua.apigee.net/dms-search-v1" />
+		<add key="BaseURL.ConnectionString5" value="" />
+		<add key="BaseURL.ConnectionString6" value="" />
+		<add key="BaseURL.ConnectionString7" value="" />
+		<add key="BaseURL.ConnectionString8" value="" />
+		<add key="BaseURL.ConnectionString9" value="" />
+
         <!-- Brand Cross Reference -->
 		<add key="BrandCrossReference.BM" value="BNM;B&amp;B_M.png;" />
 		<add key="BrandCrossReference.CR" value="CAR;Cartier;Cartier.png" />
@@ -25,7 +37,6 @@
 		<add key="BrandCrossReference.PG" value="PIA;Piaget;Piaget_Logo_Black.png" />
 		<add key="BrandCrossReference.VM" value="VAC;Vacheron;Vacheron_Logo.png" />
 		<add key="BrandCrossReference.RD" value="RDU;Roger Dubuis;logo_RD.png" />
-		<add key="BrandCrossReference.RL" value="RL;Ralph Lauren;" />
 		<add key="BrandCrossReference.VC" value="VCA;Van Cleef &amp; Arpels;VCA_Logo_Black" />
 		<add key="BrandCrossReference.LS" value="ALS;Lange &amp; Sohne;lange_and_sohne_logo.png" />
 		
