--- a/CatalogViewer/packages.config
+++ b/CatalogViewer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Json.Net" version="1.0.23" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.9" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.9" targetFramework="net47" />
@@ -15,7 +16,8 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.9" targetFramework="net47" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.9" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net47" />
-  <package id="RichemontApiLibrary" version="1.0.17" targetFramework="net472" />
+  <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net472" />
+  <package id="RichemontApiLibrary" version="1.0.20" targetFramework="net472" />
   <package id="SimpleInjector" version="5.1.0" targetFramework="net47" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net47" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net47" />
