--- a/CatalogViewer/App.config
+++ b/CatalogViewer/App.config
@@ -13,8 +13,8 @@
         <add key="ClientSettingsProvider.ConnectionStringName" value="DefaultConnection" />
 
 		<!-- Base URL. Notes: 1) Order on UI follows order below, 2) empty string items not shown on UI -->
-		<add key="BaseURL.ConnectionString0" value="https://rlg-ric-test-qua.apigee.net/dms-search-v1" />
-		<add key="BaseURL.ConnectionString1" value="https://rlg-ric-test-qua.apigee.net/dms-search-v2" />
+		<add key="BaseURL.ConnectionString0" value="https://rlg-ric-prod-prd.apigee.net/dms-search-v1" />          <!--   RKF 5/11/2021-->
+		<add key="BaseURL.ConnectionString1" value="https://rlg-ric-test-qua.apigee.net/dms-search-v1" />
 		<add key="BaseURL.ConnectionString2" value="https://rlg-ric-test-qua.apigee.net/dms-search-v1" />
 		<add key="BaseURL.ConnectionString3" value="https://rlg-ric-test-qua.apigee.net/dms-search-v1" />
 		<add key="BaseURL.ConnectionString4" value="https://rlg-ric-test-qua.apigee.net/dms-search-v1" />
@@ -40,7 +40,8 @@
 		<add key="BrandCrossReference.VC" value="VCA;Van Cleef &amp; Arpels;VCA_Logo_Black" />
 		<add key="BrandCrossReference.LS" value="ALS;Lange &amp; Sohne;lange_and_sohne_logo.png" />
 		
-        <add key="RichemontApis:ProductCatalog:Server:Host" value="https://rlg-ric-test-qua.apigee.net/dms-search-v1" />
+     <!--   <add key="RichemontApis:ProductCatalog:Server:Host" value="https://rlg-ric-test-qua.apigee.net/dms-search-v1" /> --> <!--   RKF 5/11/2021-->
+    <add key="RichemontApis:ProductCatalog:Server:Host" value="https://rlg-ric-prod-prd.apigee.net/dms-search-v1" />             <!--   RKF 5/11/2021-->
         <add key="RichemontApis:ProductCatalog:Server:HostSuffix" value="/query/product-list/result/4fe992aec7492307b439381893281f14" />
         <add key="RichemontApis:ProductCatalog:Paths:ProductList:Path" value="/query/product-list/result/4fe992aec7492307b439381893281f14" />
         <add key="RichemontApis:ProductCatalog:Paths:StandardizedProduct:Path" value="/query/standardized-product/result/1f1ea4ec1943cdc508eea28a9432cf70" />
@@ -48,8 +49,12 @@
       <add key="RichemontApis:ProductCatalog:Server:Authentication:Type" value="OAuth20" />
       <add key="RichemontApis:ProductCatalog:Server:Authentication:AuthUrl" value="https://keycloak.richemont.com/auth/realms/apim-ww-test/protocol/openid-connect/auth" />
       <add key="RichemontApis:ProductCatalog:Server:Authentication:AccessTokenUrl" value="https://keycloak.richemont.com/auth/realms/apim-ww-test/protocol/openid-connect/token" />
-      <add key="RichemontApis:ProductCatalog:Server:Authentication:ClientId" value="owA70jy8Xbqgf422W1RUlAqDY5OkfWWZ" />
-      <add key="RichemontApis:ProductCatalog:Server:Authentication:ClientSecret" value="G4SZqZIkPZMGGrUa" />
+      <!--   <add key="RichemontApis:ProductCatalog:Server:Authentication:ClientId" value="owA70jy8Xbqgf422W1RUlAqDY5OkfWWZ" />  -->   <!--   RKF 5/11/2021-->
+     <!-- <add key="RichemontApis:ProductCatalog:Server:Authentication:ClientSecret" value="G4SZqZIkPZMGGrUa" />   -->            <!--   RKF 5/11/2021-->
+
+      <add key="RichemontApis:ProductCatalog:Server:Authentication:ClientId" value="vdHf5QCAi85QkvjrV43T0A9TAhOsZunM" />          <!--   RKF 5/11/2021-->
+      <add key="RichemontApis:ProductCatalog:Server:Authentication:ClientSecret" value="b2pLMd62wHmZnkfQ" />                      <!--   RKF 5/11/2021-->
+
       <add key="RichemontApis:ProductCatalog:Server:Authentication:CallbackUrl" value="https://app.getpostman.com/oauth2/callback" />
 
         <add key="RichemontApis:StockApi:Server:Host" value="https://rlg-ric-prod-val.apigee.net/stock" />
